CMAKE_MINIMUM_REQUIRED (VERSION 3.4)

PROJECT (engine VERSION 0.0.1)

SET(BUILD_TESTING flase)

SET(PROJECT_ROOT_DIR ${PROJECT_SOURCE_DIR})

# 默认Debug 模式
SET(CMAKE_BUILD_TYPE "Debug")

# 外部库
ADD_SUBDIRECTORY(deps)

# 引擎
ADD_SUBDIRECTORY(engine)

# 单元测试
ADD_SUBDIRECTORY(test)

# 应用程序
ADD_SUBDIRECTORY(demo)

#跨平台测试
IF(WIN32)
    MESSAGE("WIN32")
ELSEIF(APPLE)
    MESSAGE("MacOS")
ELSEIF(UNIX)
    MESSAGE("Linux")
ENDIF()
