CMAKE_MINIMUM_REQUIRED (VERSION 3.4)

PROJECT (demo VERSION 1.0.1)

#指定头文件路径
INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/engine/common/include)
INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/engine/common/tools/include)

INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/engine/render/deps)
INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/engine/render/deps/freetype/include)
INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/engine/render/include)
INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/engine/render/core/include)

INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/engine/common/log/include)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

#读取Src目录
AUX_SOURCE_DIRECTORY(src DIR_SRCS)

ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS} )

#链接库
TARGET_LINK_LIBRARIES(${PROJECT_NAME} genesis)

#输出路径
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_ROOT_DIR}/build/bin)

#拷贝资源
IF(WIN32)
    FILE(COPY ${PROJECT_SOURCE_DIR}/shader DESTINATION ${PROJECT_ROOT_DIR}/build/bin/${CMAKE_BUILD_TYPE})
    # FILE(COPY ${PROJECT_SOURCE_DIR}/source DESTINATION ${PROJECT_ROOT_DIR}/build/bin/${CMAKE_BUILD_TYPE})
ELSE()
    FILE(COPY ${PROJECT_SOURCE_DIR}/shader DESTINATION ${PROJECT_ROOT_DIR}/build/bin)
    # FILE(COPY ${PROJECT_SOURCE_DIR}/source DESTINATION ${PROJECT_ROOT_DIR}/build/bin)
ENDIF()


#设置编译选项
if(WIN32)
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -Wall")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++11 -Wall")
elseif(UNIX)
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -m64 -std=c++11 -O0 -Wall -g")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -m64 -std=c++11 -O3 -Wall")
endif()